fixed word-wrap

--- a/src/public/stylesheets/my_styles.css
+++ b/src/public/stylesheets/my_styles.css
@@ -124,3 +124,7 @@ footer.footer {
     border: 0;
 }
 
+.alert_box {
+    overflow-wrap: break-word;
+}
+
